backend-deploy.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kwetteruser
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: kwetteruser
    spec:
      containers:
      - name: kwetteruser
        image: yannickrosheuvel/kwetteruser:latest
        ports:
        - containerPort: 80
  selector:
    matchLabels:
      app: kwetteruser
---
apiVersion: v1
kind: Service
metadata:
  name: kwetteruser
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: kwetteruser
